# sargasso-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_STYLE.md  README.md  SConstruct  build_glfw.py  build_glm.py  build_hypatia.py
.github/workflows/: main.yml
example/: example.cc  example.h  main.cc  main.cxx
minimal/: CMakeLists.txt  sargasso  third_party
minimal/src/: mini_vulkan.cxx  minimal.cc  minimal.cxx
minimal/src/miniVk/: application.cxx
sandbox/: CMakeLists.txt  third_party
sandbox/src/: mini_opengl.cxx
sandbox/src/miniVk/: application.cxx  validation.cxx  validation.h  vulkan_manager.cxx  vulkan_manager.h
sargasso/: CMakeLists.txt  engine.cc
sargasso/common/: containers.h  log.h
sargasso/front_end/: front_end_system.cc  front_end_system.h
sargasso/front_end/modules/: graphics.h
sargasso/front_end/utility/: camera.h  shader_loader.cc
sargasso/geometry/: mesh_generator.h
src/: CMakeLists.txt  engine.h  front_end.cc  front_end.h  glfw.cc  glfw.h  graphics.cc  graphics.h  main.cc
src/common/: file.cc  file.h  format.h  log.h  math.h  pool.h
src/common/math/: matrix3.h  matrix4.h  points.h  quaternion.cc  quaternion.h  transform.h  vector3.cc  vector3.h
src/front_end/: front_end_system.cc  front_end_system.h
src/front_end/modules/: events.cc  events.h  graphics.cc  graphics.h  time.cc  time.h
src/front_end/utility/: buffer.cc  buffer.h  camera.cc  shader_loader.cc  shader_loader.h
src/front_end/utility/shaders/: basic_fragment.glsl  basic_vertex.glsl
src/geometry/: constants.h  mesh.cc  mesh.h  mesh_generator.cc  mesh_generator.h  mesh_raw.cc  mesh_raw.h  pool.h  vertex.h
src/modules/: events.cc  events.h  graphics.cc  graphics.h  time.h
src/sargasso/: config.h  engine.cc  engine.cxx  engine.h  file_system.cxx  file_system.h  game.cxx  game.h  graphics.cxx  graphics.h  project_config.h  shader.cxx  shader.h  viewport.cxx  viewport.h
src/sargasso/common/: counter.cxx  counter.h  file.cc  file.h  io.cc  io.cxx  io.h  log.cc  log.cxx  log.h  pool.h  reference.h  typedefs.h
src/sargasso/config/: project_config.h  window_config.h
src/sargasso/filesystem/: filesystem.cxx  filesystem.h
src/sargasso/front_end/: front_end_system.cc  front_end_system.h
src/sargasso/front_end/modules/: events.cc  events.h  graphics.cc  graphics.h  time.cc  time.h
src/sargasso/front_end/utility/: buffer.cc  buffer.h  camera.cc  camera.h  shader.cc  shader.h  shader_loader.cc  shader_loader.h  shader_program.cc  shader_program.h  shader_type.h  uniform_type.cc  uniform_type.h
src/sargasso/front_end/utility/shaders/: basic_fragment.glsl  basic_vertex.glsl
src/sargasso/geometry/: constants.h  mesh.h  mesh_generator.cc  mesh_generator.h  mesh_raw.cc  mesh_raw.h  rect.h  vertex.h
src/sargasso/graphics/: dummy.cxx  dummy.h  dummy_graphics.cxx  dummy_graphics.h  graphics.h  igraphics.h  mesh_manager.cxx  mesh_manager.h  opengl.cxx  opengl.h  vulkan.cxx  vulkan.h
src/sargasso/graphics/opengl/: opengl_graphics.cxx  opengl_graphics.h
src/sargasso/shaders/: fragment_default.glsl  vertex_default.glsl
src/sargasso/window/: icontext_wrapper.h  opengl_window.cxx  window_config.h  window_manager.cxx  window_manager.h
src/sargasso/window/glfw/: glfw_context_wrapper.cxx  glfw_context_wrapper.h
src/tests/: dummy.h  tests.cxx
src/tests/spec/: reference.spec.cxx  sample.spec.cxx
src/tests/spec/common/: counter.spec.cxx  reference.spec.cxx
tests/: assertion.h  math_tests.cc  math_tests.h  mesh_tests.cc  mesh_tests.h  pool_tests.h  test.cc
